extension pour FH

--- a/Property FW and wreath products/Medians/biblio.bib
+++ b/Property FW and wreath products/Medians/biblio.bib
@@ -337,23 +337,22 @@ MRREVIEWER = {Markus Neuhauser},
        URL = {https://doi.org/10.1017/CBO9780511542749},
 }
 
-@article{Bandelt1984,
-	abstract = {An induced subgraph G of a graph H is a retract of H if there is an edge‐preserving map f from H onto G such that f|G is the identity map on G. A median graph is a connected graph such that for any three vertices u,v and w, there exists a unique vertex x which lies simultaneously on some shortest (u,v)‐, (v,w)‐, and (w,u)‐paths. It is shown that a graph G is a retract of some hypercube if and only if G is a median graph. Copyright {\textcopyright} 1984 Wiley Periodicals, Inc., A Wiley Company},
-	author = {Bandelt, H. J.},
-	date-added = {2020-10-31 17:08:05 +0100},
-	date-modified = {2020-10-31 17:08:05 +0100},
-	doi = {10.1002/jgt.3190080407},
-	issn = {10970118},
-	journal = {J. Graph Theory},
-	mendeley-groups = {Property{\_}FW{\_}and{\_}wreath{\_}product},
-	number = {4},
-	pages = {501--510},
-	title = {{Retracts of hypercubes}},
-	url = {http://doi.wiley.com/10.1002/jgt.3190080407},
-	volume = {8},
-	year = {1984},
-	Bdsk-Url-1 = {http://doi.wiley.com/10.1002/jgt.3190080407},
-	Bdsk-Url-2 = {https://doi.org/10.1002/jgt.3190080407}}
+@article {Bandelt1984,
+    AUTHOR = {Bandelt, H.-J.},
+     TITLE = {Retracts of hypercubes},
+   JOURNAL = {J. Graph Theory},
+  FJOURNAL = {Journal of Graph Theory},
+    VOLUME = {8},
+      YEAR = {1984},
+    NUMBER = {4},
+     PAGES = {501--510},
+      ISSN = {0364-9024},
+   MRCLASS = {05C99},
+  MRNUMBER = {766499},
+MRREVIEWER = {Henry Martyn Mulder},
+       DOI = {10.1002/jgt.3190080407},
+       URL = {https://doi.org/10.1002/jgt.3190080407},
+}
 
 @article{Neuhauser2005a,
 	author = {Neuhauser, Markus},
