--- a/Property FW and wreath products/Medians/Median.tex
+++ b/Property FW and wreath products/Medians/Median.tex
@@ -39,7 +39,7 @@
 %
 %
 %
-%\DeclareMathOperator\Cayley{Cayl}
+\DeclareMathOperator\Cayley{Cayl}
 %\DeclareMathOperator\Sch{Sch}
 %\DeclareMathOperator\stab{Stab}
 \DeclareMathOperator\Ind{Ind}
@@ -148,7 +148,7 @@ Let $G$ and $H$ be two discrete groups with $G$ non-trivial and let $X$ be a set
 \end{thm}
 %
 %
-For countable groups (and more generally for $\sigma$-compact locally-compact topological groups), property (T) is equivalent, by the Delorme-Guichardet's Theorem, to property FH\todo{put link to def}, see \cite[Thm. 2.12.4]{Bekka2008}.
+For countable groups (and more generally for $\sigma$-compact locally-compact topological groups), property (T) is equivalent, by the Delorme-Guichardet's Theorem, to property FH, see \cite[Thm. 2.12.4]{Bekka2008}.
 Hence, Theorem~\ref{T:Wreath_prop_T} can also be viewed, for countable groups, as a result on property FH.
 
 The corresponding result for property FA is a little more convoluted and was obtained a few years later by Cornulier and Kar.
@@ -172,7 +172,7 @@ Since the publication of Theorem~\ref{Thm:PropFW}, Y. Stalder let us know (priva
 On the other hand, A. Genevois published a new version of \cite{2017arXiv170500834G} to make explicit the fact that his ``diadem product'' construction implies that $G\wr_HH$ has property FW if and only if $G$ has property FW and $H$ is finite.
 
 The above results on property FH, FW and FA were obtained with distinct methods even if the final results share a common flavor.
-On the other hand, all three of properties FH, FW and FA can be characterized by the fact that any isometric action on a suitable metric space (respectively Hilbert space, connected median graph and tree) has bounded orbits.
+On the other hand, all three of properties FH, FW and FA can be characterized by the fact that any isometric action on a suitable metric space (respectively Hilbert space, connected median graph and tree) has bounded orbits, see Definition~\ref{Def:FHFA}.
 But more group properties can be characterized in terms of actions with bounded orbits. This is for example the case of the Bergman's property (actions on metric spaces) or of cof~$\neq\omega$ (actions on ultrametric spaces).
 
 By adopting the point of view of actions with bounded orbits, we obtain an unified proof of the following result; see also Theorem~\ref{Thm:Technic} for the general (and more technical) statement.
@@ -467,6 +467,7 @@ Hilbert spaces, Banach spaces and more generally (semi-) normed spaces are also 
  
 For connected graphs (and hence for connected median graphs and for trees), one looks at the category $\mathbf{Graph}$ where objects are connected simple graphs $G=(V,E)$ and where a morphism $f\colon (V,E)\to(V',E')$ is a function between the vertex sets such that if $(x,y)$ is an edge then either $f(x)=f(y)$ or $(f(x),f(y))$ is an edge.
 The functor $F_{\mathbf S}\colon\mathbf{Graph}\to\mathbf{Met}$ sends a connected graph to its vertex set together with the graph distance: $d(x,y)$ is the minimum number of edges on a path between $x$ and $y$.
+We can hence identify $\mathbf{Graph}$ with the full subcategory of $\mathbf{Met}$ consisting of metric spaces $(X,d)$ such that $d$ has values in~$\N$.
 
 We can now, formally define the group property \BS{} as:
 %
@@ -488,8 +489,8 @@ The category $\mathbf{QPMet}$ has the advantage (over $\mathbf{Met}$) of behavin
 However, we have\PH{Ajouté cette phrase, le lemme et la preuve. C'est utilisé implicitement dans la preuve de Prop~\ref{Prop:Extension}.}
 %
 %
-\begin{lem}
-A group $G$ has the Bergman's Property (respectively cof~$\neq\omega$) if and only if any $G$ action on a quasipseudo-metric (respectively ultra-quasipseudo-metric) space has bounded orbits.
+\begin{lem}\label{Lemma:BergQPMet}
+A group $G$ has property SB (respectively cof~$\neq\omega$) if and only if any $G$ action on a quasipseudo-metric (respectively ultra-quasipseudo-metric) space has bounded orbits.
 \end{lem}
 \begin{proof}
 One direction is trivial.
@@ -654,16 +655,16 @@ If both $G$ and $H$ have property \BS{} and $X$ is finite, then $G\wr_X H$ has p
 %
 %
 When $\mathbf{S}$ has a suitable notion of quotients (by a group of isometries), it is possible to obtain a strong version of Lemmas~\ref{Lemma:Quotient} and~\ref{Lemma:InterProd}.
-Here is the corresponding result for Bergman's property and cof~$\neq\omega$.\PH{Je n'ai pas mis l'énoncé général, car les autres espaces qui nous intéressent ne sont pas stable par quotients.}
+Here is the corresponding result for property SB and cof~$\neq\omega$.\PH{Je n'ai pas mis l'énoncé général, car les autres espaces qui nous intéressent ne sont pas stable par quotients.}
 %
 %
 \begin{prop}\label{Prop:Extension}
-Let \BS{} be either the Bergman's property, or the property cof~$\neq\omega$.
+Let \BS{} be either property SB, or the property cof~$\neq\omega$.
 Let $1\to N\to G\to H\to 1$ be a group extension.
 Then $G$ has property \BS{} if and only if $H$ has property \BS{} and the pair $(G,N)$ has the relative \BS{} property.
 \end{prop}
 \begin{proof}
-One direction is simply Lemma~\ref{Lemma:Quotient} and the definition of relative Bergman's property.
+One direction is simply Lemma~\ref{Lemma:Quotient} and the definition of relative property SB.
 
 On the other hand, let $(X,d)$ be a quasipseudo-metric space on which $G$ acts by isometries and let $x$ be an element of $X$.
 Let $\setst{g_i}{i\in I}$ a transversal for $N$, that is $H\cong\{g_iN\}$.
@@ -678,7 +679,9 @@ Altogether, we obtain that the diameter of $G.x$ is bounded by $2D_1+D_2+1$.
 %
 %
 Since the square graph, which is not median, is a quotient of the $2$-regular infinite tree by a subgroup of isometries, the proof of Proposition~\ref{Prop:Extension} does not carry over for properties FW and FA.
-However, the statement of Proposition~\ref{Prop:Extension} (stability under extension) remains true for this properties by \cite{Cornulier2013} and \cite{MR0476875}.\PH{Ce serait peut-être bien de regarder ce que l'on connait pour la propriété FH; n.b. (T) est stable par extensions.}
+Similarly, the quotient of $\R$ by the action of $\Z/2\Z$ given by $x\mapsto-x$ is not an Hilbert space and hence the proof of Proposition~\ref{Prop:Extension} does not apply to property FH.
+However, the statement of Proposition~\ref{Prop:Extension} (stability under extension) remains true for properties FH, FW and FA.
+For property FH this is an exercice using the fixed-point definition, for property FW and FA, see \cite{Cornulier2013} and \cite{MR0476875}.\PH{Ajouté ce paragraphe}
 
 We now state a result on infinite direct sums.
 %
@@ -894,8 +897,101 @@ Moreover, by using Lemma~\ref{Lemma:Cof} we can get ride of the ``finitely many 
 %
 %
 %
-\bibliography{biblio.bib}
-\bibliographystyle{plain}
+%\bibliography{biblio.bib}
+%\bibliographystyle{plain}
+\begin{thebibliography}{10}
+
+\bibitem{Bandelt1984}
+H.-J. Bandelt.
+\newblock Retracts of hypercubes.
+\newblock {\em J. Graph Theory}, 8(4):501--510, 1984.
+
+\bibitem{MR2405677}
+Hans-J{\"{u}}rgen Bandelt and Victor Chepoi.
+\newblock {Metric graph theory and geometry: a survey}.
+\newblock In {\em Surv. Discret. Comput. Geom.}, volume 453 of {\em Contemp.
+  Math.}, pages 49--86. Amer. Math. Soc., Providence, RI, 2008.
+
+\bibitem{Bekka2008}
+Bachir Bekka, Pierre de~la Harpe, and Alain Valette.
+\newblock {\em Kazhdan's property ({T})}, volume~11 of {\em New Mathematical
+  Monographs}.
+\newblock Cambridge University Press, Cambridge, 2008.
+
+\bibitem{MR2671183}
+Indira Chatterji, Cornelia Dru\c{t}u, and Fr\'{e}d\'{e}ric Haglund.
+\newblock Kazhdan and {H}aagerup properties from the median viewpoint.
+\newblock {\em Adv. Math.}, 225(2):882--921, 2010.
+
+\bibitem{Cherix2004}
+Pierre-Alain Cherix, Florian Martin, and Alain Valette.
+\newblock Spaces with measured walls, the {H}aagerup property and property
+  ({T}).
+\newblock {\em Ergodic Theory Dynam. Systems}, 24(6):1895--1908, 2004.
+
+\bibitem{Cornulier2013}
+Yves {Cornulier}.
+\newblock {Group actions with commensurated subsets, wallings and cubings}.
+\newblock {\em arXiv e-prints}, page arXiv:1302.5982, February 2013.
+
+\bibitem{MR3299841}
+Yves Cornulier.
+\newblock Irreducible lattices, invariant means, and commensurating actions.
+\newblock {\em Math. Z.}, 279(1-2):1--26, 2015.
+
+\bibitem{Cornulier2011}
+Yves Cornulier and Aditi Kar.
+\newblock On property ({FA}) for wreath products.
+\newblock {\em J. Group Theory}, 14(1):165--174, 2011.
+
+\bibitem{MR2240370}
+Yves de~Cornulier.
+\newblock Strongly bounded groups and infinite powers of finite groups.
+\newblock {\em Comm. Algebra}, 34(7):2337--2345, 2006.
+
+\bibitem{2017arXiv170500834G}
+Anthony {Genevois}.
+\newblock {Lamplighter groups, median spaces, and a-T-menability}.
+\newblock {\em arXiv e-prints}, page arXiv:1705.00834, May 2017.
+
+\bibitem{MR1663779}
+V.~Gerasimov.
+\newblock Fixed-point-free actions on cubings [translation of {\it {a}lgebra,
+  geometry, analysis and mathematical physics ({r}ussian) ({n}ovosibirsk,
+  1996)}, 91--109, 190, {I}zdat. {R}oss. {A}kad. {N}auk {S}ibirsk. {O}tdel.
+  {I}nst. {M}at., {N}ovosibirsk, 1997; {MR}1624115 (99c:20049)].
+\newblock {\em Siberian Adv. Math.}, 8(3):36--58, 1998.
+
+\bibitem{MR1705337}
+Sandi Klav{\v{z}}ar and Henry~Martyn Mulder.
+\newblock {Median graphs: characterizations, location theory and related
+  structures}.
+\newblock {\em J. Comb. Math. Comb. Comput.}, 30:103--127, 1999.
+
+\bibitem{LS2020}
+Paul-Henry {Leemann} and Gr{\'e}goire {Schneeberger}.
+\newblock {Property {FW} and wreath products of groups: a simple approach using
+  Schreier graphs}.
+\newblock {\em arXiv e-prints}, page arXiv:2101.03817, January 2021.
+
+\bibitem{MR3465847}
+Ashot Minasyan.
+\newblock New examples of groups acting on real trees.
+\newblock {\em J. Topol.}, 9(1):192--214, 2016.
+
+\bibitem{Neuhauser2005a}
+Markus Neuhauser.
+\newblock Relative property ({T}) and related properties of wreath products.
+\newblock {\em Math. Z.}, 251(1):167--177, 2005.
+
+\bibitem{MR0476875}
+Jean-Pierre Serre.
+\newblock {\em Arbres, amalgames, {${\SL}_{2}$}}.
+\newblock Soci{\'e}t{\'e} Math{\'e}matique de France, Paris, 1977.
+\newblock Avec un sommaire anglais, R{\'e}dig{\'e} avec la collaboration de
+  Hyman Bass, Ast{\'e}risque, No. 46.
+
+\end{thebibliography}
 %
 %
 %
@@ -913,6 +1009,21 @@ Some of the properties that are of interest for us have been historically define
 Since our actions are by isometries, property F$\mathbf S$ implies property \BS. The other implication holds as soon as we have a suitable notion of the center of a (non-empty) bounded subset $X$.
 This is for example the case for (real or complex) Hilbert spaces \cite[Lemma 2.2.7]{Bekka2008}. On the other hand, property FA is usually defined as ``any action without inversion on a tree as a fixed point'', which is equivalent to ``any action on a tree either fixes a point or fixes the middle of an edge''. It is easy exercise to prove that if an action of a group on a tree has one bounded orbit, then it fixes a point or the middle of an edge.
 For action on (ultra)-metric spaces or on connected median graphs, F$\mathbf S$ is stricly stronger than \BS. Indeed, this trivially follows from the action by rotation of $C_4$ on the square graph.
-However,  by \cite{MR1663779, Cornulier2013} if a group $G$ acts on a connected median graph with a bounded orbit, then it has a finite orbit.
+However,  by \cite{MR1663779, Cornulier2013} if a group $G$ acts on a connected median graph with a bounded orbit, then it has a finite orbit.\\[3ex]
+
+\todo[inline]{Un autre truc qu'on peut décider d'ajouter (juste après le lemme~\ref{Lemma:BergQPMet}) ou pas}
+On the other hand, the following result is perhaps more surprising.
+%
+%
+\begin{lem}
+A group $G$ has property SB if and only if any $G$ action on a connected graph has bounded orbits.
+\end{lem}
+\begin{proof}
+The left-to-right implication is clear.
+
+For the other direction, we will use the following characterization property SB due to Cornulier \cite{MR2240370}. A group $G$ has property SB if and only if it has cof~$\neq\omega$ and for every generating set $T$ of $G$ the Calyey graph $\Cayley(G;T)$ is bounded.
+
+Suppose that any $G$ action on a connected graph has bounded orbits. Then $G$ has property FW and hence cof~$\neq\omega$. On the other hand, for every generating set $T$, the group $G$ acts transitively on $\Cayley(G;T)$, which implies that the latter is bounded. By the above characterization, we obtain that $G$ has property SB.
+\end{proof}
 
 \end{document}
