--- a/Property FW and wreath products/Medians/biblio.bib
+++ b/Property FW and wreath products/Medians/biblio.bib
@@ -5,6 +5,22 @@
 
 
 %% Saved with string encoding Unicode (UTF-8)
+@article {MR1023471,
+    AUTHOR = {de la Harpe, Pierre and Valette, Alain},
+     TITLE = {La propri\'{e}t\'{e} {$(T)$} de {K}azhdan pour les groupes localement
+              compacts (avec un appendice de {M}arc {B}urger)},
+      NOTE = {With an appendix by M. Burger},
+   JOURNAL = {Ast\'{e}risque},
+  FJOURNAL = {Ast\'{e}risque},
+    NUMBER = {175},
+      YEAR = {1989},
+     PAGES = {158},
+      ISSN = {0303-1179},
+   MRCLASS = {22-02 (05C99 22D10 22E99 28C10)},
+  MRNUMBER = {1023471},
+MRREVIEWER = {Michael Cowling},
+}
+
 @article {MR1663779,
     AUTHOR = {Gerasimov, V.},
      TITLE = {Fixed-point-free actions on cubings [translation of {\it
