--- a/Property FW and wreath products/Medians/Median.tex
+++ b/Property FW and wreath products/Medians/Median.tex
@@ -168,7 +168,7 @@ Let $G$ and $H$ be two groups with $G$ non-trivial and let $X$ be a set on which
 \end{thm}
 %
 %
-Since the publication of Theorem~\ref{Thm:PropFW}, Y. Stalder let us know (private communication) that the arguments of \cite{LS2020} can be adapted to spaces with walls in order to replace the finite generation hypothesis of Theorem~\ref{Thm:PropFW} by the fact that all three of $G$, $H$ and $G\wr_XH$ are at most countable.
+Since the publication of Theorem~\ref{Thm:PropFW}, Y. Stalder has let us know (private communication) that the arguments of \cite{LS2020} can be adapted to spaces with walls in order to replace the finite generation hypothesis of Theorem~\ref{Thm:PropFW} by the fact that all three of $G$, $H$ and $G\wr_XH$ are at most countable.
 On the other hand, A. Genevois published a new version of \cite{2017arXiv170500834G} to make explicit the fact that his ``diadem product'' construction implies that $G\wr_HH$ has property FW if and only if $G$ has property FW and $H$ is finite.
 
 The above results on property FH, FW and FA were obtained with distinct methods even if the final results share a common flavor.
