--- a/Property FW and wreath products/Medians/Median.tex
+++ b/Property FW and wreath products/Medians/Median.tex
@@ -581,7 +581,7 @@ On the other hand, \cite[Lemma 2.2.7]{Bekka2008} gives a simple proof of the exi
 %This is for example the case for (real or complex) Hilbert spaces \cite[Lemma 2.2.7]{Bekka2008} as well as for reflexive Banach spaces (the proof of \cite[Lemma 2.2.7]{Bekka2008} applies mutatis mutandis)\PH{Vérifier}. On the other hand, property FA is usually defined as ``any action without inversion on a tree as a fixed point'', which is equivalent to ``any action on a tree either fixes a point or fixes the middle of an edge''. It is easy exercise to prove that if an action of a group on a tree has one bounded orbit, then it fixes a point or the middle of an edges.
 
 For action on (ultra)-metric spaces or on connected median graphs, F$\mathbf S$ is stricly stronger than \BS. Indeed, this trivially follows from the action by rotation of $C_4$ on the square graph.
-However,  by \cite{MR1663779, Cornulier2013} if a group $G$ acts on a connected median graph with a bounded orbit, then it has a finite orbit.\\[3ex]
+However,  by \cite{Cornulier2013,MR1663779} if a group $G$ acts on a connected median graph with a bounded orbit, then it has a finite orbit.\\[3ex]
 
 
 %
@@ -728,7 +728,7 @@ On the other hand, let $(X,d)$ be a quasipseudo-metric space on which $G$ acts b
 Let $\setst{g_i}{i\in I}$ be a transversal for $N$, that is $H\cong\{g_iN\}$.
 By assumption, $N.x$ is bounded of diameter $D_1$ and for any $i\in I$ the subset $g_iN.x$ of $X$ has also diameter $D_1$.
 Since $N$ is a subgroup of isometries of $X$, the map $d'\colon X/N\times X/N\to\R$ defined by $d'([x],[y])\coloneqq\inf\setst{d(x',y')}{x'\in N.x,y'\in N.y}$ is the quotient quasipseudo-distance on $X/N$.
-Indeed, while the map $d'$ might not satisfies the triangle inequality for a generic quotient $X/\sim$, this is the case if the quotient is by a subgroup of isometries; details are left to the reader. \GS{C'est bien mieux comme ça !}
+Indeed, while the map $d'$ might not satisfies the triangle inequality for a generic quotient $X/\sim$, this is the case if the quotient is by a subgroup of isometries; details are left to the reader. %\GS{C'est bien mieux comme ça !}
 %\PH{J'ai mis ça (ton texte en commentaire). À voir celui qui rend mieux en anglais.}
 %The triangle inequality stays not true in general for a quotient of $X$, but we leave it to the reader to verify that it is true in this case. \GS{Une remarque comme ça ?}%\PH{En général, pour $X/\sim$, $d'$ ne satisfait pas l'inégalité triangulaire, mais c'est vrai pour $X/N$. Est-ce qu'il faut expliciter ?}
 Moreover, if $d$ satisfied the strong triangle inequality, then so does $d'$.
