--- a/Property FW and wreath products/Bouts/biblio.bib
+++ b/Property FW and wreath products/Bouts/biblio.bib
@@ -200,7 +200,7 @@ Reprint of the 1994 edition},
 
 @article{Bandelt1984,
 	abstract = {An induced subgraph G of a graph H is a retract of H if there is an edge‐preserving map f from H onto G such that f|G is the identity map on G. A median graph is a connected graph such that for any three vertices u,v and w, there exists a unique vertex x which lies simultaneously on some shortest (u,v)‐, (v,w)‐, and (w,u)‐paths. It is shown that a graph G is a retract of some hypercube if and only if G is a median graph. Copyright {\textcopyright} 1984 Wiley Periodicals, Inc., A Wiley Company},
-	author = {Bandelt, H. J.},
+	author = {Bandelt, Hans-J{\"{u}}rgen},
 	date-added = {2020-10-31 17:08:05 +0100},
 	date-modified = {2020-10-31 17:08:05 +0100},
 	doi = {10.1002/jgt.3190080407},
