--- a/Property FW and wreath products/Medians/Median.tex
+++ b/Property FW and wreath products/Medians/Median.tex
@@ -964,7 +964,7 @@ Moreover, by using Lemma~\ref{Lemma:Cof} we can get ride of the ``finitely many 
 \begin{thebibliography}{10}
 
 \bibitem{Bandelt1984}
-H.-J. Bandelt.
+Hans-J{\"{u}}rgen Bandelt.
 \newblock Retracts of hypercubes.
 \newblock {\em J. Graph Theory}, 8(4):501--510, 1984.
 
