--- a/Property FW and wreath products/Medians/biblio.bib
+++ b/Property FW and wreath products/Medians/biblio.bib
@@ -354,7 +354,7 @@ MRREVIEWER = {Markus Neuhauser},
 }
 
 @article {Bandelt1984,
-    AUTHOR = {Bandelt, H.-J.},
+    AUTHOR = {Bandelt, Hans-J{\"{u}}rgen},
      TITLE = {Retracts of hypercubes},
    JOURNAL = {J. Graph Theory},
   FJOURNAL = {Journal of Graph Theory},
